<resources>
    <string name="app_name">intelSmsApp</string>
    <string name="msg_error_201">请求失败,请检查网络是否正常或使用CTNet登录,错误码201</string>
    <string name="msg_error_202">请求失败,请稍后重试,错误码202</string>
    <string name="msg_error_301">请求超时,请稍后再试,错误码301</string>
    <string name="msg_error_302">失败,请重试,错误码302</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="success">成功</string>
    <string name="loading">正在加载...</string>
    <string name="titleName">短信列表</string>
    <string name="detailTitleName">短信详情</string>
    <string name="unkown">未知</string>
    <string name="code">验证码</string>
    <string name="copycode">复制验证码</string>
    <string name="smscontent">验证码262604，您正在向王欢（尾号2361）转账，金额495元。任何向您索要验证码的都是骗子，千万别给！[招商银行]</string>
    <string name="train">火车票</string>
    <string name="train_des">目的地</string>
    <string name="train_gotime">出发时间：</string>
    <string name="train_seat">4车3号下铺</string>
    <string name="smscontent_train">【铁路客服】订单EB28101259,蒋艳军您已购10月2日K916次4车3号下铺阜新南站21:30开</string>
    <string name="bank">银行</string>
    <string name="bank_remind">出账提醒：</string>
    <string name="bank_deal_count">交易金额：</string>
    <string name="bank_card_number">交易卡号：</string>
    <string name="bank_deal_time">交易时间：</string>
    <string name="bank_buss_desc">业务摘要：</string>
    <string name="bank_balance">账户余额：</string>
    <string name="send">发送</string>
    <string name="s_msg_intent_failed">跳转失败</string>
    s_msg_intent_failed
</resources>
