<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:paddingTop="20dip"
              android:paddingBottom="20dip"
              android:background="@color/bg_gray"
              android:orientation="vertical">

        <TextView
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-thin"
                android:text="13:03"
                android:textColor="@color/pop_gray"
                android:textSize="24sp"/>
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginBottom="40dp"
            android:background="#33B6EA">
        <TextView
                android:id="@+id/banktitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dip"
                android:layout_centerVertical="true"
                android:fontFamily="sans-serif-thin"
                android:text="@string/bank"
                android:textColor="#fff"
                android:textSize="34sp"/>

        <ImageView
                android:id="@+id/action_setting_ibtn"
                android:src="@drawable/icon_right"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="15dp"/>
    </RelativeLayout>

    <LinearLayout
            android:id="@+id/contentLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">
<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:weightSum="100"
        android:orientation="horizontal">
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="30"
            android:fontFamily="sans-serif-thin"
            android:text="@string/bank_deal_count"
            android:textColor="#33B6EA"
            android:textSize="34sp"/>
</LinearLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dip"
                android:layout_marginRight="20dip"
        android:orientation="vertical">
            <TextView
                    android:id="@+id/bank_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="sans-serif-thin"
                    android:text="100.89"
                    android:textColor="#33B6EA"
                    android:textSize="34sp"/>
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dip"
                android:layout_marginRight="20dip"
                android:layout_marginBottom="20dip"
                android:weightSum="100"
                android:orientation="horizontal">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="40"
                    android:fontFamily="sans-serif-thin"
                    android:text="@string/bank_card_number"
                    android:textColor="#666666"
                    android:textSize="24sp"/>


            <TextView
                    android:id="@+id/bank_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="sans-serif-light"
                    android:text="*********1234"
                    android:textSize="20sp"/>
        </LinearLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dip"
                android:layout_marginRight="20dip"
                android:layout_marginBottom="20dip"
                android:weightSum="100"
                android:orientation="horizontal">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="40"
                    android:fontFamily="sans-serif-thin"
                    android:text="@string/bank_deal_time"
                    android:textColor="#666666"
                    android:textSize="24sp"/>


            <TextView
                    android:id="@+id/bank_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="sans-serif-light"
                    android:text="9月26日18：35"
                    android:textSize="20sp"/>
        </LinearLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dip"
                android:layout_marginRight="20dip"
                android:layout_marginBottom="20dip"
                android:weightSum="100"
                android:orientation="horizontal">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="40"
                    android:fontFamily="sans-serif-thin"
                    android:text="@string/bank_buss_desc"
                    android:textColor="#666666"
                    android:textSize="24sp"/>


            <TextView
                    android:id="@+id/bank_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="sans-serif-light"
                    android:text="消费"
                    android:textSize="20sp"/>
        </LinearLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dip"
                android:layout_marginRight="20dip"
                android:layout_marginBottom="20dip"
                android:weightSum="100"
                android:orientation="horizontal">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="40"
                    android:fontFamily="sans-serif-thin"
                    android:text="@string/bank_balance"
                    android:textColor="#666666"
                    android:textSize="24sp"/>


            <TextView
                    android:id="@+id/bank_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="sans-serif-light"
                    android:text="9999"
                    android:textSize="20sp"/>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>
