<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:paddingTop="20dip"
              android:paddingBottom="20dip"
              android:background="@color/bg_gray"
              android:orientation="vertical">

        <TextView
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-thin"
                android:text="13:03"
                android:textColor="@color/pop_gray"
                android:textSize="24sp"/>
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginBottom="40dp"
            android:background="#33B6EA">
        <TextView
                android:id="@+id/codetitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dip"
                android:layout_centerVertical="true"
                android:fontFamily="sans-serif-thin"
                android:text="@string/train"
                android:textColor="#fff"
                android:textSize="34sp"/>

        <ImageView
                android:id="@+id/action_setting_ibtn"
                android:src="@drawable/icon_right"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="15dp"/>
    </RelativeLayout>

    <LinearLayout
            android:id="@+id/contentLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">
<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:orientation="horizontal">
    <TextView
            android:id="@+id/train_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif-thin"
            android:text="北京"
            android:textColor="#33B6EA"
            android:textSize="34sp"/>

<LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
android:orientation="vertical">
    <TextView
            android:id="@+id/train_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-light"
            android:text="K123"
            android:textSize="20sp"/>
    <ImageView
            android:layout_width="match_parent"
            android:layout_height="10dip"
            android:layout_marginLeft="5dip"
            android:layout_marginRight="5dip"
            android:src="@drawable/icon_down_arrow"/>
</LinearLayout>

    <TextView
            android:id="@+id/train_des"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif-thin"
            android:text="@string/train_des"
            android:textColor="#33B6EA"
            android:textSize="34sp"/>
</LinearLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dip"
                android:layout_marginRight="20dip"
                android:layout_marginBottom="20dip"
                android:weightSum="100"
                android:orientation="horizontal">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="40"
                    android:fontFamily="sans-serif-thin"
                    android:text="@string/train_gotime"
                    android:textColor="#666666"
                    android:textSize="24sp"/>


            <TextView
                    android:id="@+id/train_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="sans-serif-light"
                    android:text="10月02日"
                    android:textSize="20sp"/>
            <TextView
                    android:id="@+id/train_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-thin"
                    android:text="21:35"
                    android:textColor="#666666"
                    android:textSize="15sp"/>
        </LinearLayout>

    <View
            android:id="@+id/list_item_seperator"
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:layout_marginLeft="5dip"
            android:layout_marginRight="5dip"
            android:background="@color/colorAccent"/>

    <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:gravity="center"
            android:paddingBottom="20dip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                android:id="@+id/train_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:fontFamily="sans-serif-thin"
                android:text="@string/train_seat"
                android:textColor="#666666"
                android:textSize="24sp"/>

    </LinearLayout>
    </LinearLayout>
</LinearLayout>
